--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -163,3 +163,51 @@ h1, h2, h3, h4, h5, h6 {
 		transform: rotate(45deg);
 	}
 }
+
+@media (max-width: 820px) {
+	.full-container {
+		width: 17rem;	
+	}
+
+	.h1 {
+		font-size: 1.5rem;
+	}
+
+	.label {
+		font-size: .9rem;
+	}
+
+	.input:checked + .label .meme_image {
+		max-width: 14rem;
+	}
+
+	@media (hover: hover) {
+		.label:hover .meme_image {
+			max-width: 14rem;
+		}
+	}
+}
+
+@media (max-width: 320px) {
+	.full-container {
+		width: 16rem;	
+	}
+
+	.h1 {
+		font-size: 1.4rem;
+	}
+
+	.label {
+		font-size: .8rem;
+	}
+
+	.input:checked + .label .meme_image {
+		max-width: 13rem;
+	}
+
+	@media (hover: hover) {
+		.label:hover .meme_image {
+			max-width: 13rem;
+		}
+	}
+}
